fix(ui): truncate long release strings

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -422,6 +422,10 @@
       text-align: right;
       line-height: 1.8;
       position: relative;
+
+      a {
+        .truncate();
+      }
     }
   }
 
